--- a/css/base.css
+++ b/css/base.css
@@ -165,8 +165,6 @@ span.lpn-ghost {
   top: 20px;
   width: 267px;
   height: 25px;
-  opacity: 0.5;
-  background: blue;
 }
 .main-board .board-m-t .b-bar{
   height: 4px;
@@ -199,8 +197,6 @@ span.lpn-ghost {
   height: 25px;
   text-align: center;
   line-height: 25px;
-  opacity: 0.5;
-  background: blue;
 }
 .main-board .board-m-b a{
   margin: 0 15px;
@@ -214,13 +210,38 @@ span.lpn-ghost {
   right: 54px;
   line-height: 90px;
   text-indent: 1.5em;
-  opacity: 0.5;
-  background: blue;
 }
-
+.main-bottom{
+  position: absolute;
+  bottom: 13px;
+  font-size: 11px;
+  color: #C2C2C2;
+  left: 20px;
+}
+.video-mask{
+  background: rgba( 0 , 0 , 0 , 0.3 );
+}
 .video-wrap{
   width: 775px;
   height: 460px;
-  margin-top: -30px;
+  margin-top: -40px;
   background: url(../images/video-bg.png) no-repeat;
+}
+.video-wrap video{
+  width: 720px;
+  background: black;
+  height: 405px;
+  margin-top: 27px;
+}
+.video-skip{
+  color: white;
+  width: 99px;
+  height: 34px;
+  line-height: 34px;
+  background: url(../images/skip-bg.png) no-repeat;
+  margin-top: -18px;
+  clear: both;
+  float: right;
+  margin-right: 21px;
+  cursor: pointer;
 }
