--- a/css/base.css
+++ b/css/base.css
@@ -159,8 +159,9 @@ span.lpn-ghost {
   height: 70px;
   top: 17px;
   left: 44px;
-  opacity: 0.5;
-  background: blue;
+  font-size: 80px;
+  line-height: 80px;
+  color: white;
 }
 .main-board .board-m-t{
   position: absolute;
@@ -221,7 +222,7 @@ span.lpn-ghost {
   color: #C2C2C2;
   left: 20px;
 }
-.main-cars img{
+.main-cars .car{
   position: absolute;
   bottom: 0;
   right: 100%;
