--- a/css/base.css
+++ b/css/base.css
@@ -77,6 +77,7 @@ a {
   z-index: 999999;
   text-align : center;
   white-space: nowrap;
+  background: rgba(0,0,0,0.3);
   _position : absolute;
   _top  : expression( ( ignoreMe  = document.documentElement.scrollTop  ) + 'px' );
   _left : expression( ( ignoreMe2 = document.documentElement.scrollLeft ) + 'px' );
@@ -163,6 +164,14 @@ span.lpn-ghost {
   font-size: 80px;
   line-height: 80px;
   color: white;
+}
+.main-board .board-time{
+  color: white;
+  font-size: 24px;
+  position: absolute;
+  left: 187px;
+  font-style: italic;
+  top: 26px;
 }
 .main-board .board-m-t{
   position: absolute;
@@ -321,4 +330,59 @@ span.lpn-ghost {
   float: right;
   margin-right: 21px;
   cursor: pointer;
+}
+
+.result{
+  width: 814px;
+  height:347px;
+  background: url(../images/result-panel.png) no-repeat;
+  position: relative;
+}
+.result .r-text{
+  color: white;
+  font-size: 30px;
+  font-family: 黑体;
+  font-style: italic;
+  line-height: 1.4em;
+  position: relative;
+  top: 110px;
+}
+.result .r-again{
+  width: 168px;
+  position: absolute;
+  height: 50px;
+  top: 273px;
+  left: 106px;
+  cursor: pointer;
+}
+.result .r-share{
+  position: absolute;
+  width: 327px;
+  height: 50px;
+  top: 273px;
+  left: 292px;
+}
+.result .r-close{
+  position: absolute;
+  height: 40px;
+  width: 66px;
+  right: 37px;
+  top: 267px;
+  cursor: pointer;
+}
+
+/********add css animate plugin**********/
+
+.css-animate {
+  transition:   All 1s ease;
+  -webkit-transition:   All 1s ease;
+  -moz-transition:  All 1s ease;
+  -o-transition:  All 1s ease;
+  -ms-transition:  All 1s ease;
+
+   -webkit-transform: translate3d(0, 0, 0);
+   -moz-transform: translate3d(0, 0, 0);
+   -ms-transform: translate3d(0, 0, 0);
+   -o-transition: translate3d(0, 0, 0);
+   transform: translate3d(0, 0, 0);
 }
