--- a/css/base.css
+++ b/css/base.css
@@ -449,31 +449,28 @@ span.lpn-ghost {
 }
 
 .speed10{
-    background-position: -70px -89px;
+    background-position: 0 -89px;
 }
 .speed11{
+    background-position: -70px -89px;
+}
+.speed12{
     background-position: -140px -89px;
 }
-.speed12{
-    background-position: -210px -89px;
-}
-.speed12{
-    background-position: -285px -89px;
-}
 .speed13{
-    background-position: -357px -89px;
+    background-position: -210 -89px;
 }
 .speed14{
-    background-position: -427px -89px;
+    background-position: -285px -89px;
 }
 .speed15{
-    background-position: -500px -89px;
+    background-position: -357px -89px;
 }
 .speed16{
-    background-position: -574px -89px;
+    background-position: -427px -89px;
 }
 .speed17{
-    background-position: -645px -89px;
+    background-position: -500px -89px;
 }
 .speed18{
     background-position: -574px -89px;
@@ -482,37 +479,34 @@ span.lpn-ghost {
     background-position: -645px -89px;
 }
 
-.speed20{
+.speed10{
+    background-position: 0 -178px;
+}
+.speed11{
     background-position: -70px -178px;
 }
-.speed21{
+.speed12{
     background-position: -140px -178px;
 }
-.speed22{
-    background-position: -210px -178px;
+.speed13{
+    background-position: -210 -178px;
 }
-.speed22{
+.speed14{
     background-position: -285px -178px;
 }
-.speed23{
-    background-position: -357px -178px;
+.speed15{
+    background-position: -357px -178;
 }
-.speed24{
+.speed16{
     background-position: -427px -178px;
 }
-.speed25{
+.speed17{
     background-position: -500px -178px;
 }
-.speed26{
+.speed18{
     background-position: -574px -178px;
 }
-.speed27{
-    background-position: -645px -178px;
-}
-.speed28{
-    background-position: -574px -178px;
-}
-.speed29{
+.speed19{
     background-position: -645px -178px;
 }
 
