--- a/css/base.css
+++ b/css/base.css
@@ -99,6 +99,7 @@ span.lpn-ghost {
 }
 #loading-mask{
   background : #dfdfdf url('../images/loading-bg.png') no-repeat center center;
+    background-size:100% 100%;
 }
 #loading-mask .lpn-panel{
   background: white;
@@ -294,8 +295,8 @@ span.lpn-ghost {
 .main-cars .car .end-wheel{
   background: url(../images/wheel.png) no-repeat;
   position: absolute;
-  height: 95px;
-  width: 95px;
+  height: 94px;
+  width: 94px;
   top: 116px;
   left: 201px;
 }
