--- a/css/base.css
+++ b/css/base.css
@@ -38,7 +38,7 @@ textarea {
 body {
     color : #fff;
     font: 14px/20px arial,STHeiti,simsun,sans-serif;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 a:link, a:visited , a:hover , a:active {
