--- a/css/base.css
+++ b/css/base.css
@@ -533,6 +533,12 @@ span.lpn-ghost {
   cursor: pointer;
   display:none;
 }
+.ranking {
+    background:url(../images/ranking-bg.png) no-repeat;
+    width:776px;
+    height:458px;
+    position: relative;
+}
 #result-mask .lpn-panel {overflow:hidden;height:0;}
 .result{
   width: 1161px;
@@ -575,7 +581,7 @@ span.lpn-ghost {
   top: 280px;
   left: 243px;
 }
-.result .r-close{
+.result .r-close,.ranking .r-close{
   background:url(../images/result_close.png) no-repeat;
   position: absolute;
   height: 43px;
@@ -588,7 +594,7 @@ span.lpn-ghost {
 .result .r-close:hover {
     opacity:1;
 }
-.result .r-list{
+.result .r-list,.ranking .r-list{
   position: absolute;
   top: 83px;
   left: 633px;
@@ -597,16 +603,23 @@ span.lpn-ghost {
   overflow: hidden;
   line-height: 23px;
 }
-.result .r-list table{
+.ranking .r-list {
+    top:116px;
+    left:246px;
+}
+.result .r-list table,.ranking .r-list table{
   width: 100%;
   color: white;
 }
 .result .r-list tr:nth-child(1),
 .result .r-list tr:nth-child(2),
-.result .r-list tr:nth-child(3){
+.result .r-list tr:nth-child(3),
+.ranking .r-list tr:nth-child(1),
+.ranking .r-list tr:nth-child(2),
+.ranking .r-list tr:nth-child(3){
   color: red;
 }
-.result .r-slider{
+.result .r-slider,.ranking .r-slider{
   position: absolute;
   width: 13px;
   height: 26px;
@@ -615,10 +628,10 @@ span.lpn-ghost {
   right: 191px;
   cursor: ns-resize;
 }
-.result .r-slider hr:first-child{
+.result .r-slider hr:first-child,.ranking .r-slider hr:first-child{
   margin-top: 8px;
 }
-.result .r-slider hr{
+.result .r-slider hr,.ranking .r-slider hr{
   border-top: 1px solid #ababab;
   border-bottom: 1px solid #000;
   margin: 2px 2px;
