--- a/css/base.css
+++ b/css/base.css
@@ -37,7 +37,7 @@ textarea {
 }
 body {
     color : #fff;
-    font: 14px/20px arial,STHeiti,simsun,sans-serif;
+    font: 14px/20px STHeiti,arial,simsun,sans-serif;
     overflow: hidden;
 }
 img,a,div,span{
